# detect_object

./: .gitignore  CMakeLists.txt  README.md
src/: dataStructures.h  detect_objects_2.cpp
